--- a/src/components/reviewitem/Reviewitem.css
+++ b/src/components/reviewitem/Reviewitem.css
@@ -3,8 +3,9 @@
     border: 1px solid #95A0A7;
     border-radius: 8px;
     margin-bottom: 25px;
-    padding: 8px;
+    padding: 8px 25px 8px 8px;
     display: flex;
+    align-items: center;
 }
 
 .review-item .product-title {
@@ -32,9 +33,18 @@
     color: #FF9900;
 }
 
+/* delete button styles */
 .btn-delete{
     height: 55px;
     width: 55px;
     border-radius: 50%;
-    background: rgba(235, 87, 87, 0.3);
+    background-color: rgba(235, 87, 87, 0.3);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.delete-icon {
+    color: #EB5757;
+    font-size: 27px;
 }
